force-app/main/default/objects/Apttus__CycleTimeGroup__c/Apttus__CycleTimeGroup__c.object-meta.xml
<CustomObject>
    <description>Holds the groups monitored for cycle time data capture</description>
    <label>Cycle Time Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Time Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>