force-app/main/default/objects/Apttus__CycleTimeGroup__c/fields/Apttus__Cycle_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Cycle_Time_Field__c</fullName>
    <description>The field associated with the group</description>
    <label>Cycle Time Field</label>
    <referenceTo>Apttus__CycleTimeField__c</referenceTo>
    <relationshipLabel>Cycle Time Groups</relationshipLabel>
    <relationshipName>Cycle_Time_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>