force-app/main/default/objects/Apttus__CycleTimeGroup__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>The group description</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>