force-app/main/default/objects/Apttus__CycleTimeGroup__c/fields/Apttus__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Field_Label__c</fullName>
    <description>The associated field label</description>
    <label>Field Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>