force-app/main/default/objects/Apttus__CycleTimeGroup__c/fields/Apttus__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the group is active for cycle time data capture</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>