force-app/main/default/objects/Apttus__CycleTimeGroup__c/fields/Apttus__To__c.field-meta.xml
<CustomField>
    <fullName>Apttus__To__c</fullName>
    <description>The field value which marks the end of the group</description>
    <label>To Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>